Small change to hopefully fix background images on mobile devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,7 +172,7 @@
     color: #BF5700;
 }
 
-@media (max-width: 767px) {
+@media screen and (max-width: 768px) {
     #landing {
         margin-top: 57px;
         padding-top: 65px;
